*NEW [work,intro,layout] modify texts, adjust layout to avoid overflow of work descriptions

--- a/src/index.css
+++ b/src/index.css
@@ -225,6 +225,7 @@ a:hover {
 
 .Job .job-link {
     width: 3rem;
+    flex-shrink: 0;
 }
 
 .Job .job-header .text {
